--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScriptMe</title>
-    <link rel="stylesheet" href="/static/css/style.css"> <!-- Correct path to style.css -->
-    <script src="/static/script.js" defer></script> <!-- Correct path to script.js -->
+    <link rel="stylesheet" href="static/css/style.css"> <!-- Relative path for GitHub Pages -->
+    <script src="static/script.js" defer></script> <!-- Relative path for GitHub Pages -->
 </head>
 <body>
     <nav>
