Update index.html for optimisation of functionality

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavascriptMe</title>
+    <title>JavaScriptMe</title>
     <link rel="stylesheet" href="static/css/style.css">
     <script src="static/script.js" defer></script>
 </head>
 <body>
     <nav>
-        <h1>JavascriptMe</h1>
+        <h1>JavaScriptMe</h1>
         <button onclick="toggleTheme()">Toggle Dark Mode</button>
     </nav>
 
